--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    
    
    
-    <title>HABLI HIKMAN</title>
+    <title>habli hikman</title>
     
     <!--bootstrap CSS-->
    
@@ -28,7 +28,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
         <div class="container">
-          <a class="navbar-brand" href="#">Habli Hikman</a>
+          <a class="navbar-brand" href="#">habli hikman</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
