--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;900&display=swap" rel="stylesheet">
    
    
     <title>habli hikman</title>
@@ -41,7 +43,7 @@
                 <a class="nav-link" href="#">Project</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Service</a>
+                <a class="nav-link" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Kontak</a>
@@ -59,7 +61,7 @@
 
     <section class="jumbotron text-center"> <br>
       <img src="img/habli_hikman_3.jpg" alt="habli_hikman" width="180" class="rounded-circle img-thunbnail" >
-      <h1 class="display-4">Habli Hikman</h1> 
+      <h1 class="display-4">habli hikman</h1> 
         <p class="lead">UI Designer | SEO Specialist</p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#000000" fill-opacity="1" d="M0,96L360,192L720,160L1080,224L1440,224L1440,320L1080,320L720,320L360,320L0,320Z"></path></svg>
       </section>
