--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
           <!--kosong braaay-->
         </div>
         <div class="col-3 text-start">
-          <p>Terlahir dari rahim <em>Bundo Minangkabau</em> di perantauan, tepatnya di kota Tangerang</p>
+          <p>Terlahir dari rahim <em>Bundo Minangkabau</em> di perantauan, tepatnya di kota Tangerang dengan 3 orang bersaudara</p>
+          <p>kemudian besar dengan kasih sayang orang tua hingga SD kelas 6 <em>Bundo Minangkabau</em> di perantauan, tepatnya di kota Tangerang</p>
         </div>
         <div class="col-1">
           <!--kosong braaay-->
