--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <div class="card">
                   <img src="img/video-tutorial-3.jpg" class="card-img-top" alt="Project 5" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="https://youtu.be/1H36hdxUIf8?si=b-8BGWQ0lHlmEqPo">SID retail touchscreen</a><br>(membuat motion graphic promo produk, 2018)</p>
+                    <p class="card-text text-center"><a href=" https://youtu.be/BqMwIWrXMSI?si=Rrn5euDGhA2W6kKa">SID retail touchscreen</a><br>(membuat motion graphic promo produk, 2018)</p>
                   </div>
                 </div>
               </div>
@@ -516,6 +516,7 @@
      <br><br><br>
      <footer class="bg-primary text-white text-center pb-2 pt-3">
       <p>dibuat oleh <a href="https://api.whatsapp.com/send?phone=6282313084908" class="text-white fw-bold">habli hikman</a></p>
+      <p>whatsapp<a href="https://api.whatsapp.com/send?phone=6282313084908"></a></p>
     </footer>
     <!-- Akhir Footer -->
 
