--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
            <p>Terlahir dari rahim <em>Bundo Minangkabau</em> di perantauan, tepatnya di kota Tangerang dengan 3 orang bersaudara</p>
            <p>Kemudian besar dengan kasih sayang oleh orang tua hingga kelas 6 SD</p>
            <p>Setelah lulus SD, dibesarkan dengan cinta oleh <em>datuk</em> dan <em>enek</em> hingga Tamat SMA di Desa yang damai bernama Kubang di Kab. Lima Puluh Kota, Sumatera Barat</p>
-           <p>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di jurusan Desain Komunikasi Visual, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</p>
-           <p>2013, bekerja di Harian Haluan Padang yang sangat-sangat membentuk mental kerja yang tahan banting, kuliah di siang hari bekerja sebagai desain layouter di malam hari</p>
+           <p>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di Prodi Desain Komunikasi Visual, Jurusan Seni Rupa, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</p>
+           <p>2013, bekerja di Harian Haluan Padang yang sangat-sangat membentuk mental kerja tahan banting, kuliah di siang hari bekerja sebagai desain layouter di malam hari</p>
           </div>
 
          <div class="col-4 text-center">
-           <p>Memutuskan untuk menikah di akhir tahun 2015, kisah berlanjut di wilayah <em>empunya</em> Kesultanan Hamengkubuwono, D.I Yogyakarta. Lalu bekerja sebagai Desainer di CV. Andalas Visindo bergerak di bidang IT</p>
-           <p>2018 CV Andalas  Visindo berubah menjadi PT Inti Core Indonesia, naik pangkat menjadi Designer & SEO Specialist</p>
-           <p><em>Qadarullah</em>, ada sesuatu hal yang menyebabkan harus kembali mudik ke Kampung halaman di akhir tahun 2021,  mencoba menjadi pekebun dadakan di kampung halaman</p>
-           <p>Mencoba hal baru di dunia pertanian, bertanam buah jeruk dan cabai di tahun 2021-2023</p>
+           <p>Memutuskan untuk menikah di akhir tahun 2015, kemudian kisah berlanjut di wilayah <em>empunya</em> Kesultanan Hamengkubuwono, D.I Yogyakarta, lalu bekerja sebagai Desainer di CV. Andalas Visindo bergerak di bidang IT di Awal tahun 2016.</p>
+           <p>Medio 2018 CV Andalas Visindo berubah menjadi PT Inti Core Indonesia, naik pangkat menjadi Designer & SEO Specialist</p>
+           <p><em>Qadarullah</em>, ada sesuatu hal yang menyebabkan harus kembali mudik ke Kampung halaman di awal tahun 2022,  mencoba menjadi pekebun dadakan di kampung halaman</p>
+           <p>Mencoba hal baru di dunia pertanian, bertanam buah jeruk dan cabai di tahun 2022-2023</p>
            <p>Dan sekarang, mencoba peruntungan di Kota Curup, Bengkulu sebagai teknisi handphone, <em>Alhamdulillah</em> </p>
           </div>
 
@@ -153,6 +153,7 @@
               <img src="img/akulah-mercusuar.JPG" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <p class="card-text text-center">akulah mercusuar<br>(2012)</p>
+                <a>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di Prodi Desain Komunikasi Visual, Jurusan Seni Rupa, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</a>
               </div>
             </div>
           </div>
@@ -214,6 +215,7 @@
               <img src="img/logo-kriuk-krip.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
                 <p class="card-text text-center">kriuk krip<br>(usaha UMKM, 2013)</p>
+                <p class="card-text text-center">Kriuk Krip House merupakan pendatang baru dalam dunia kuliner rendang kemasan, karena masih dalam tahap awal produksi, maka dibuatlah sebuah desain brosur untuk mencapai target konsumen yang mudah dijangkau dengan cara mendesain media brosur yang identik khas warna rendang dilakukan penyebaran brousr dengan teknik door to door.</p>
               </div>
             </div>
           </div>
