--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="card">
               <img src="img/akulah-mercusuar.JPG" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text text-center"><strong>akulah mercusuar</strong><br>(2012)</p>
+                <p class="card-text text-center fw-bold">akulah mercusuar<br>(2012)</p>
                 <a>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di Prodi Desain Komunikasi Visual, Jurusan Seni Rupa, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</a>
               </div>
             </div>
@@ -161,7 +161,7 @@
             <div class="card">
               <img src="img/sign.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text text-center">sign<br>(2012)</p>
+                <p class="card-text text-center fw-bold">sign<br>(2012)</p>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
             <div class="card">
               <img src="img/ilustrasi-wpap-gadih-suntiang.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text text-center">gadih suntiang<br>(2012)</p>
+                <p class="card-text text-center fw-bold">gadih suntiang<br>(2012)</p>
               </div>
             </div>
           </div>
