--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="card">
               <img src="img/akulah-mercusuar.JPG" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text text-center fw-bold">akulah mercusuar<br>(2012)</p>
+                <p class="card-text text-center fw-bold">Akulah Mercusuar<br>(2012)</p>
                 <a>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di Prodi Desain Komunikasi Visual, Jurusan Seni Rupa, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</a>
               </div>
             </div>
@@ -161,7 +161,7 @@
             <div class="card">
               <img src="img/sign.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text text-center fw-bold">sign<br>(2012)</p>
+                <p class="card-text text-center fw-bold">Sign<br>(2012)</p>
               </div>
             </div>
           </div>
@@ -169,7 +169,7 @@
             <div class="card">
               <img src="img/ilustrasi-wpap-gadih-suntiang.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text text-center fw-bold">gadih suntiang<br>(2012)</p>
+                <p class="card-text text-center fw-bold">Gadih Suntiang<br>(2012)</p>
               </div>
             </div>
           </div>
@@ -177,7 +177,7 @@
             <div class="card">
               <img src="img/komik.jpg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
-                <p class="card-text text-center">melo si planga plongo<br>(komik, 2012)</p>
+                <p class="card-text text-center fw-bold">Melo Si Planga Plongo<br>(komik, 2012)</p>
               </div>
             </div>
           </div>
@@ -185,7 +185,7 @@
             <div class="card">
               <img src="img/ikon-3.png" class="card-img-top" alt="Project 5" />
               <div class="card-body">
-                <p class="card-text text-center">ikon<br>(icon pameran unlimited freedom, 2013)</p>
+                <p class="card-text text-center fw-bold">Ikon<br>(icon pameran unlimited freedom, 2013)</p>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
             <div class="card">
               <img src="img/logo-amelia-gorden.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text text-center">amelia gorden<br>(toko gorden, 2011)</p>
+                <p class="card-text text-center fw-bold">Amelia Gorden<br>(toko gorden, 2011)</p>
               </div>
             </div>
           </div>
@@ -214,7 +214,7 @@
             <div class="card">
               <img src="img/logo-kriuk-krip.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text text-center">kriuk krip<br>(usaha UMKM, 2013)</p>
+                <p class="card-text text-center fw-bold">Kriuk Krip<br>(usaha UMKM, 2013)</p>
                 <p class="card-text text-center">Kriuk Krip House merupakan pendatang baru dalam dunia kuliner rendang kemasan, karena masih dalam tahap awal produksi, maka dibuatlah sebuah desain brosur untuk mencapai target konsumen yang mudah dijangkau dengan cara mendesain media brosur yang identik khas warna rendang dilakukan penyebaran brousr dengan teknik door to door.</p>
               </div>
             </div>
@@ -223,7 +223,7 @@
             <div class="card">
               <img src="img/logo-ici.png" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text text-center">pt. inti core indonesia<br>(perusahaan start up bidang IT, 2017)</p>
+                <p class="card-text text-center fw-bold">PT. Inti Core Indonesia<br>(perusahaan start up bidang IT, 2017)</p>
               </div>
             </div>
           </div>
@@ -231,7 +231,7 @@
             <div class="card">
               <img src="img/logo-st.net.png" class="card-img-top" alt="Project 4" />
               <div class="card-body">
-                <p class="card-text text-center">softwaretoko.net<br>(website penjualan software, 2018)</p>
+                <p class="card-text text-center fw-bold">softwaretoko.net<br>(website penjualan software, 2018)</p>
               </div>
             </div>
           </div>
@@ -239,7 +239,7 @@
             <div class="card">
               <img src="img/logo-nakdent-journey.jpg" class="card-img-top" alt="Project 5" />
               <div class="card-body">
-                <p class="card-text text-center">nakdent journey<br>(channel youtube,2021)</p>
+                <p class="card-text text-center fw-bold">Nakdent Journey<br>(channel youtube,2021)</p>
               </div>
             </div>
           </div>
@@ -248,7 +248,7 @@
             <div class="card">
               <img src="img/acorepos.jpg" class="card-img-top" alt="Project 6" />
               <div class="card-body">
-                <p class="card-text text-center">acorepos<br>(website penjualan software, 2021)</p>
+                <p class="card-text text-center fw-bold">Acorepos<br>(website penjualan software, 2021)</p>
               </div>
             </div>
           </div>
@@ -270,7 +270,7 @@
             <div class="card">
               <img src="img/layout-haluan.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text text-center">harian haluan padang<br>(perwajahan halaman utama, 2015)</p>
+                <p class="card-text text-center fw-bold">Harian Haluan Padang<br>(perwajahan halaman utama, 2015)</p>
               </div>
             </div>
           </div>
@@ -278,7 +278,7 @@
             <div class="card">
               <img src="img/layout-haluan-2.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text text-center">harian haluan padang<br>(perwajahan halaman utama, 2015)</p>
+                <p class="card-text text-center fw-bold">Harian Haluan Padang<br>(perwajahan halaman utama, 2015)</p>
               </div>
             </div>
           </div>
@@ -286,7 +286,7 @@
             <div class="card">
               <img src="img/layout-haluan-3.jpg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
-                <p class="card-text text-center">harian haluan padang<br>(perwajahan halaman pariwara, 2015)</p>
+                <p class="card-text text-center fw-bold">Harian Haluan Padang<br>(perwajahan halaman pariwara, 2015)</p>
               </div>
             </div>
           </div>
@@ -306,7 +306,7 @@
               <div class="card">
                 <img src="img/brosur-kriuk-krip-2.jpg" class="card-img-top" alt="Project 1" />
                 <div class="card-body">
-                  <p class="card-text text-center">brosur kriuk krip<br>(brosur usaha UMKM rendang, 2013)</p>
+                  <p class="card-text text-center fw-bold">Brosur Kriuk Krip<br>(brosur usaha UMKM rendang, 2013)</p>
                 </div>
               </div>
             </div>
@@ -314,7 +314,7 @@
               <div class="card">
                 <img src="img/brosur-software.jpg" class="card-img-top" alt="Project 2" />
                 <div class="card-body">
-                  <p class="card-text text-center">brosur software-id.com<br>(brosur usaha penjualan software, 2017)</p>
+                  <p class="card-text text-center fw-bold">Brosur software-id.com<br>(brosur usaha penjualan software, 2017)</p>
                 </div>
               </div>
             </div>
@@ -334,7 +334,7 @@
               <div class="card">
                 <img src="img/poster-setia-pada-satu-pasangan.jpg" class="card-img-top" alt="Project 1" />
                 <div class="card-body">
-                  <p class="card-text text-center">tetap setia<br>(Juara 1 Lomba Poster BKKBN Sumbar, Padang, 2013)</p>
+                  <p class="card-text text-center fw-bold">Tetap Setia<br>(Juara 1 Lomba Poster BKKBN Sumbar, Padang, 2013)</p>
                 </div>
               </div>
             </div>
@@ -343,7 +343,7 @@
               <div class="card">
                 <img src="img/poster-ilmiah.jpg" class="card-img-top" alt="Project 2" />
                 <div class="card-body">
-                  <p class="card-text text-center">poster ilmiah<br>(poster seminar karya akhir, 2015)</p>
+                  <p class="card-text text-center fw-bold">Poster Ilmiah<br>(poster seminar karya akhir, 2015)</p>
                 </div>
               </div>
             </div>
@@ -352,7 +352,7 @@
               <div class="card">
                 <img src="img/break-sholat.jpg" class="card-img-top" alt="Project 3" />
                 <div class="card-body">
-                  <p class="card-text text-center">break sholat<br>(poster break sholat toko mr. gadget, 2023)</p>
+                  <p class="card-text text-center fw-bold">Break Sholat<br>(poster break sholat toko mr. gadget, 2023)</p>
                 </div>
               </div>
             </div>
@@ -374,7 +374,7 @@
                 <div class="card">
                   <img src="img/sidretail-id.jpg" class="card-img-top" alt="Project 1" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="http://gokasir.com/">sidretail.id</a></p>
+                    <p class="card-text text-center fw-bold"><a href="http://gokasir.com/">sidretail.id</a></p>
                   </div>
                 </div>
               </div>
@@ -382,7 +382,7 @@
                 <div class="card">
                   <img src="img/softwaretoko.net.jpg" class="card-img-top" alt="Project 2" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="http://softwaretoko.net">softwaretoko.net</a></p>
+                    <p class="card-text text-center fw-bold"><a href="http://softwaretoko.net">softwaretoko.net</a></p>
                   </div>
                 </div>
               </div>
@@ -390,7 +390,7 @@
                 <div class="card">
                   <img src="img/softwaretoko.co.id.jpg" class="card-img-top" alt="Project 3" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="http://softwaretoko.co.id/">softwaretoko.co.id</a></p>
+                    <p class="card-text text-center fw-bold"><a href="http://softwaretoko.co.id/">softwaretoko.co.id</a></p>
                   </div>
                 </div>
               </div>
@@ -398,7 +398,7 @@
                 <div class="card">
                   <img src="img/gokasir.jpg" class="card-img-top" alt="Project 4" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="http://gokasir.com/">gokasir.com</a></p>
+                    <p class="card-text text-center fw-bold"><a href="http://gokasir.com/">gokasir.com</a></p>
                   </div>
                 </div>
               </div>
@@ -418,7 +418,7 @@
                 <div class="card">
                   <img src="img/video-tutorial.jpg" class="card-img-top" alt="Project 1" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="https://youtu.be/gjYWXCZrd_c?si=nLzRM0BWizlR6jc3">tutorial install SID Retail P2P</a><br>(membuat video tutorial cara penginstalan software, 2016)</p>
+                    <p class="card-text text-center fw-bold"><a href="https://youtu.be/gjYWXCZrd_c?si=nLzRM0BWizlR6jc3">Tutorial Install SID Retail P2P</a><br>(membuat video tutorial cara penginstalan software, 2016)</p>
                   </div>
                 </div>
               </div>
@@ -426,7 +426,7 @@
                 <div class="card">
                   <img src="img/marhaban-ramadan.jpg" class="card-img-top" alt="Project 2" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="https://youtu.be/bS-WOgdw4sw?si=T4DtVV4EYkMDgbqu">marhaban ya ramadhan</a><br>(membuat motion graphic ucapan selamat datang bulan Ramadan, 2016)</p>
+                    <p class="card-text text-center fw-bold"><a href="https://youtu.be/bS-WOgdw4sw?si=T4DtVV4EYkMDgbqu">Marhaban ya Ramadan</a><br>(membuat motion graphic ucapan selamat datang bulan Ramadan, 2016)</p>
                   </div>
                 </div>
               </div>
@@ -434,7 +434,7 @@
                 <div class="card">
                   <img src="img/profil-company-ici.jpg" class="card-img-top" alt="Project 3" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="https://youtu.be/JgAIeM6sN8k?si=hX67G7jXTbPS5ZRF">company profil</a><br>(membuat motion graphic company profil dari perusahaan start up, 2017)</p>
+                    <p class="card-text text-center fw-bold"><a href="https://youtu.be/JgAIeM6sN8k?si=hX67G7jXTbPS5ZRF">Company Profil PT. Inti Core Indonesia</a><br>(membuat motion graphic company profil dari perusahaan start up, 2017)</p>
                   </div>
                 </div>
               </div>
@@ -442,7 +442,7 @@
                 <div class="card">
                   <img src="img/video-tutorial-2.jpg" class="card-img-top" alt="Project 4" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href="https://youtu.be/1H36hdxUIf8?si=b-8BGWQ0lHlmEqPo">video tutorial</a><br>(membuat video tutorial cara melakukan penjualan barang secara manual, 2018)</p>
+                    <p class="card-text text-center fw-bold"><a href="https://youtu.be/1H36hdxUIf8?si=b-8BGWQ0lHlmEqPo">Video Tutorial</a><br>(membuat video tutorial cara melakukan penjualan barang secara manual, 2018)</p>
                   </div>
                 </div>
               </div>
@@ -451,7 +451,7 @@
                 <div class="card">
                   <img src="img/video-tutorial-3.jpg" class="card-img-top" alt="Project 5" />
                   <div class="card-body">
-                    <p class="card-text text-center"><a href=" https://youtu.be/BqMwIWrXMSI?si=Rrn5euDGhA2W6kKa">SID retail touchscreen</a><br>(membuat motion graphic promo produk, 2018)</p>
+                    <p class="card-text text-center fw-bold"><a href=" https://youtu.be/BqMwIWrXMSI?si=Rrn5euDGhA2W6kKa">SID Retail Touchscreen</a><br>(membuat motion graphic promo produk, 2018)</p>
                   </div>
                 </div>
               </div>
@@ -479,7 +479,7 @@
                 <div class="card">
                   <img src="img/konten-media-sosial-2.jpg" class="card-img-top" alt="Project 2" />
                   <div class="card-body">
-                    <p class="card-text text-center">instagram<br><a href="https://www.instagram.com/penjualansoftwaredotcom/?max_id=1318536031397599280">penjualansoftwaredotcom</a></p>
+                    <p class="card-text text-center fw-bold">instagram<br><a href="https://www.instagram.com/penjualansoftwaredotcom/?max_id=1318536031397599280">penjualansoftwaredotcom</a></p>
                 </div>
               </div>
 
@@ -499,7 +499,7 @@
                 <div class="card">
                   <img src="img/seo-softwaretoko.net.jpg" class="card-img-top" alt="Project 1" />
                   <div class="card-body">
-                    <p class="card-text text-center">konten artikel untuk optimasi pencarian keyword di laman google (membuat konten pada website softwaretoko.net dengan sasaran keyword “aplikasi kasir”pada wordpress)</p>
+                    <p class="card-text text-center fw-bold">konten artikel untuk optimasi pencarian keyword di laman google (membuat konten pada website softwaretoko.net dengan sasaran keyword “aplikasi kasir”pada wordpress)</p>
                   </div>
                 </div>
               </div>
