--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
             <div class="card">
               <img src="img/akulah-mercusuar.JPG" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text text-center fw-bold">Akulah Mercusuar<br>(2012)</p>
+                <p class="card-text text-center fw-bold">Akulah Mercusuar</p>
+                <p class="card-text text-center">(2012)</p> <br>
                 <a>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di Prodi Desain Komunikasi Visual, Jurusan Seni Rupa, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</a>
               </div>
             </div>
