--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <div class="card-body">
                 <p class="card-text text-center fw-bold">Akulah Mercusuar</p>
                 <p class="card-text text-center">(2012)</p> <br>
-                <a>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di Prodi Desain Komunikasi Visual, Jurusan Seni Rupa, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</a>
+                <p class="card-text text-center">Membuat desain baju untuk diri sendiri sebagai curahan hati seorang pengagum rahasia kepada seseorang dengan ilustrasi sebuah mercusuar yang selalu menerangi jalan kapalnyanya pergi dan pulang</p> 
               </div>
             </div>
           </div>
@@ -162,7 +162,9 @@
             <div class="card">
               <img src="img/sign.jpg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
-                <p class="card-text text-center fw-bold">Sign<br>(2012)</p>
+                <p class="card-text text-center fw-bold">Sign</p>
+                <p class="card-text text-center">(2012)</p> <br>
+                <p class="card-text text-center">Membuat desain baju untuk diri sendiri sebagai curahan hati seorang pengagum rahasia kepada seseorang dengan ilustrasi sebuah mercusuar yang selalu menerangi jalan kapalnyanya pergi dan pulang</p>
               </div>
             </div>
           </div>
