--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="col-4 text-center">
            <p>Terlahir dari rahim <em>Bundo Minangkabau</em> di perantauan, tepatnya di kota Tangerang dengan 3 orang bersaudara</p>
            <p>Kemudian besar dengan kasih sayang oleh orang tua hingga kelas 6 SD</p>
-           <p>Setelah lulus SD, dibesarkan dengan cinta oleh <em>datuk</em> dan <em>enek</em> hingga Tamat SMA di Desa yang damai bernama Kubang di Kab. Lima Puluh Kota, Sumatera Barat</p>
+           <p>'Setelah lulus SD, dibesarkan dengan cinta oleh <em>datuk</em> dan <em>enek</em> hingga Tamat SMA di Desa yang damai bernama Kubang di Kab. Lima Puluh Kota, Sumatera Barat</p>
            <p>Beranjak Remaja berkuliah di Fakultas Ekonomi, Universitas Negeri Padang dari 2008-2010, merasa karena bukan jiwanya, mulai kuliah lagi di Prodi Desain Komunikasi Visual, Jurusan Seni Rupa, Fakultas Bahasa dan Seni, Universitas Negeri Padang di tahun 2010-2015</p>
            <p>2013, bekerja di Harian Haluan Padang yang sangat-sangat membentuk mental kerja tahan banting, kuliah di siang hari bekerja sebagai desain layouter di malam hari</p>
           </div>
